banner, loading and error message component

--- a/src/app/global-feed/components/global-feed/global-feed.component.html
+++ b/src/app/global-feed/components/global-feed/global-feed.component.html
@@ -1,2 +1,14 @@
-<p>global-feed works!</p>
-<app-feed></app-feed>
+<div class="home-page">
+  <app-banner></app-banner>
+  <div class="container page">
+    <div class="row">
+      <div class="col-md-9">
+        FEED TOGGLER
+        <app-feed [apiUrl]="apiUrl"></app-feed>
+      </div>
+      <div class="col-md-3">
+        POPULAR TAGS
+      </div>
+    </div>
+  </div>
+</div>
