--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -1,1 +1,32 @@
-<p>feed works!</p>
+<app-loading *ngIf="isLoading$ | async"></app-loading>
+
+<app-error-message *ngIf="error$ | async"></app-error-message>
+
+<div *ngIf="feed$ | async">
+  <div
+    class="article-preview"
+    *ngFor="let article of (feed$ | async)?.articles"
+  >
+    <div class="article-meta">
+      <a [routerLink]="['/profiles', article.author.username]">
+        <img [src]="article.author.image" />
+      </a>
+      <div class="info">
+        <a [routerLink]="['/profiles', article.author.username]" class="author">
+          {{ article.author.username }}
+        </a>
+        <span class="date">{{ article.createdAt }}</span>
+      </div>
+      <div class="pull-xs-right">
+        ADD TO FAVORITES
+      </div>
+    </div>
+    <a [routerLink]="['/aricles', article.slug]" class="preview-link">
+      <h1>{{ article.title }}</h1>
+      <p>{{ article.description }}</p>
+      <span>Read more..</span>
+      HERE LIST OF TAGS
+    </a>
+  </div>
+  PAGINATION
+</div>
