pagination component and fetch results on page change

--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -28,5 +28,10 @@
       HERE LIST OF TAGS
     </a>
   </div>
-  PAGINATION
+  <app-pagination
+    [total]="(feed$ | async)?.articlesCount"
+    [limit]="limit"
+    [url]="baseUrl"
+    [currentPage]="currentPage"
+  ></app-pagination>
 </div>
