--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -21,7 +21,7 @@
         ADD TO FAVORITES
       </div>
     </div>
-    <a [routerLink]="['/aricles', article.slug]" class="preview-link">
+    <a [routerLink]="['/articles', article.slug]" class="preview-link">
       <h1>{{ article.title }}</h1>
       <p>{{ article.description }}</p>
       <span>Read more..</span>
