--- a/src/app/create-article/components/create-article/create-article.component.html
+++ b/src/app/create-article/components/create-article/create-article.component.html
@@ -1,1 +1,6 @@
-<app-article-form></app-article-form>
+<app-article-form
+  [initialValues]="initialValues"
+  [isSubmitting]="isSubmitting$ | async"
+  [errors]="backendErrors$ | async"
+  (articleSubmit)="onSubmit($event)"
+></app-article-form>
