add/remove post to favorites effect

--- a/src/app/shared/modules/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/feed/components/feed/feed.component.html
@@ -18,7 +18,12 @@
         <span class="date">{{ article.createdAt }}</span>
       </div>
       <div class="pull-xs-right">
-        ADD TO FAVORITES
+        <app-add-to-favorites
+          [isFavorited]="article.favorited"
+          [articleSlug]="article.slug"
+          [favoritesCount]="article.favoritesCount"
+        >
+        </app-add-to-favorites>
       </div>
     </div>
     <a [routerLink]="['/articles', article.slug]" class="preview-link">
