--- a/src/app/article/components/article/article.component.html
+++ b/src/app/article/components/article/article.component.html
@@ -3,17 +3,11 @@
     <div class="container" *ngIf="article">
       <h1>{{ article.title }}</h1>
       <div class="article-meta">
-        <a [routerLink]="['/profiles', article.author.username]">
-          <img [src]="article.author.image" />
-        </a>
-        <div class="info">
-          <a [routerLink]="['/profiles', article.author.username]">
-            {{ article.author.username }}
-          </a>
-          <span class="date">
-            {{ article.createdAt }}
-          </span>
-        </div>
+        <app-user-link
+          [username]="article.author.username"
+          [userImage]="article.author.image"
+          [date]="article.createdAt"
+        ></app-user-link>
         <span *ngIf="isAuthor$ | async">
           <a
             [routerLink]="['/articles', article.slug, 'edit']"
