--- a/src/app/article/components/article/article.component.scss
+++ b/src/app/article/components/article/article.component.scss
@@ -1,9 +1,3 @@
-.info .date {
-  color: #bbb;
-  font-size: 0.8rem;
-  display: block;
-}
-
 .banner {
   padding: 2rem 0;
 
@@ -23,10 +17,9 @@
 
   .article-meta {
     margin: 2rem 0 0;
-
-    .author {
-      color: #fff;
-    }
+    display: block;
+    position: relative;
+    font-weight: 300;
   }
 }
 
