--- a/src/app/article/components/article/article.component.scss
+++ b/src/app/article/components/article/article.component.scss
@@ -1,9 +1,14 @@
 .banner {
   padding: 2rem 0;
+  color: #fff;
+  background: #333;
+  margin-bottom: 2rem;
 
   h1 {
     font-size: 2.8rem;
     font-weight: 600;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    margin-bottom: 0;
   }
 
   .btn {
