--- a/src/app/shared/modules/banner/components/banner/banner.component.scss
+++ b/src/app/shared/modules/banner/components/banner/banner.component.scss
@@ -1,13 +1,17 @@
 .banner {
   background: #5cb85c;
+  color: #fff;
+  padding: 2rem;
+  margin-bottom: 2rem;
   box-shadow: inset 0 8px 8px -8px rgba(0, 0, 0, 0.3),
     inset 0 -8px 8px -8px rgba(0, 0, 0, 0.3);
 
   h1 {
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-    font-weight: 700 !important;
+    font-weight: 700;
     text-align: center;
     font-size: 3.5rem;
+    margin-bottom: 0;
     padding-bottom: 0.5rem;
   }
 
@@ -15,7 +19,7 @@
     color: #fff;
     text-align: center;
     font-size: 1.5rem;
-    font-weight: 300 !important;
+    font-weight: 300;
     margin-bottom: 0;
   }
 }
